# remote-dread-lua-console

./: README.md  pyproject.toml  pyuic.json  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/remote_dread_lua_console/: cli.py  console_window.py  lua_executor.py  window_signals.py
ui_files/: console_window.ui  dread_lua_console_window.ui
